Update demo URLs for RGB to Hex and Calculator projects

--- a/assets/data/projects.json
+++ b/assets/data/projects.json
@@ -60,7 +60,7 @@
     "description": "Utility to convert RGB colors to Hex format.",
     "tech": ["Utility"],
     "repoUrl": "https://github.com/msaligs/rgb2hex",
-    "demoUrl": null,
+    "demoUrl": https://msaligs.github.io/rgb2hex/,
     "type": "exploration"
   },
   {
@@ -68,7 +68,7 @@
     "description": "A basic calculator application.",
     "tech": [],
     "repoUrl": "https://github.com/msaligs/simple_calculator",
-    "demoUrl": null,
+    "demoUrl": https://msaligs.github.io/simple_calculator/,
     "type": "exploration"
   }
 ]
